tests/reference/asr-test_len1-839a615.stderr
semantic error: len() is only supported for `str`, `set`, `dict`, `list` and `tuple`
 --> tests/errors/test_len1.py:4:11
  |
4 |     print(len(x))
  |           ^^^^^^ 
